--- a/src/app/views/customer/new/new.component.html
+++ b/src/app/views/customer/new/new.component.html
@@ -1,3 +1,194 @@
-<p>
-  new works!
-</p>
+<form nz-form [formGroup]="queryForm" class="ant-advanced-search-form query-head">
+  <div nz-row [nzGutter]="30">
+    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label [attr.for]="'phone'">家长电话</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="19">
+          <nz-input nzSize="large" nzPlaceHolder="请输入家长电话" formControlName="phone" nzId="phone"></nz-input>
+        </div>
+      </div>
+    </div>
+    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label [attr.for]="'name'">宝宝昵称</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="19">
+          <nz-input [nzSize]="'large'" nzPlaceHolder="请输入宝宝昵称" formControlName="name" nzId="name"></nz-input>
+        </div>
+      </div>
+    </div>
+    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label [attr.for]="'createTimeStart'">填写日期</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="19">
+          <nz-datepicker 
+            nz-col [nzSpan]="11"
+            formControlName="createTimeStart" 
+            [nzSize]="'large'" 
+            [nzPlaceHolder]="'开始日期'" 
+            [nzFormat]="'YYYY-MM-DD'"
+            [nzDisabledDate]="_disabledStartDate1"
+          ></nz-datepicker>
+          <div nz-col [nzSpan]="2" style="text-align: center">-</div>
+          <nz-datepicker 
+            nz-col [nzSpan]="11"
+            formControlName="createTimeEnd" 
+            [nzSize]="'large'" 
+            [nzPlaceHolder]="'结束日期'" 
+            [nzFormat]="'YYYY-MM-DD'" 
+            [nzDisabledDate]="_disabledEndDate1"
+          ></nz-datepicker>
+        </div>
+      </div>
+    </div>
+    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label [attr.for]="'priceStart'">活动价格</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="19">
+          <nz-input-number nzSize="large" formControlName="priceStart" nzPlaceHolder="最低价格"></nz-input-number>
+          <div nz-col [nzSpan]="2" style="text-align: center">-</div>
+          <nz-input-number nzSize="large" formControlName="priceEnd" nzPlaceHolder="最高价格" [nzMin]="queryForm.get('priceStart').value"></nz-input-number>
+        </div>
+      </div>
+    </div>
+    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label>省市区</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="19">
+          <nz-cascader 
+            formControlName="address"
+            nzSize="large"
+            [nzOptions]="_options" 
+            nzPlaceHolder="省市区" 
+            [nzChangeOnSelect]="true"
+            (nzChange)="_addressChange($event)">
+          </nz-cascader>
+        </div>
+      </div>
+    </div>
+    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label>所属门店</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="19">
+          <nz-select nzSize="large" formControlName="store" nzPlaceHolder="请选择所属门店" [nzShowSearch]="true" nzAllowClear>
+            <nz-option
+              *ngFor="let option of storeItems"
+              [nzLabel]="option.label"
+              [nzValue]="option"
+              [nzDisabled]="option.disabled">
+            </nz-option>
+          </nz-select>
+        </div>
+      </div>
+    </div>
+    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label [attr.for]="'createTimeStart'">预约日期</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="19">
+          <nz-datepicker 
+            nz-col [nzSpan]="11"
+            formControlName="reserveTimeStart" 
+            [nzSize]="'large'" 
+            [nzPlaceHolder]="'开始日期'" 
+            [nzFormat]="'YYYY-MM-DD'"
+            [nzDisabledDate]="_disabledStartDate2"
+          ></nz-datepicker>
+          <div nz-col [nzSpan]="2" style="text-align: center">-</div>
+          <nz-datepicker 
+            nz-col [nzSpan]="11"
+            formControlName="reserveTimeEnd" 
+            [nzSize]="'large'" 
+            [nzPlaceHolder]="'结束日期'" 
+            [nzFormat]="'YYYY-MM-DD'" 
+            [nzDisabledDate]="_disabledEndDate2"
+          ></nz-datepicker>
+        </div>
+      </div>
+    </div>
+    <div nz-col [nzSpan]="24" nz-form-item [style.text-align]="'center'">
+      <button nz-button nzSize="large" [nzType]="'primary'" (click)="query()">搜索</button>
+      <button nz-button nzSize="large" (click)="resetForm()">重置</button>
+      <nz-button-group [style.float]="'right'">
+        <button nz-button nzType="primary" (click)="showModalForComponent()">新增客户信息</button>
+        <button nz-button nzType="primary">批量导入客户信息</button>
+        <button nz-button nzType="primary">新增客户来源</button>
+      </nz-button-group>
+    </div>
+  </div>
+</form>
+
+
+<nz-table #nzTable [nzDataSource]="tableItems" [nzPageSize]="10" [nzScroll]="{ y: 560 }">
+  <ng-template #nzFixedHeader>
+    <thead nz-thead>
+      <tr>
+        <th nz-th [nzExpand]="true" nzWidth="50px"></th>
+        <th nz-th nzWidth="80px">
+          <span>家长电话</span>
+        </th>
+        <th nz-th nzWidth="80px">
+          <span>宝宝昵称</span>
+        </th>
+        <th nz-th nzWidth="100px">
+          <span>客户来源</span>
+        </th>
+        <th nz-th nzWidth="160px">
+          <span>省市区</span>
+        </th>
+        <th nz-th nzWidth="160px">
+          <span>归属门店</span>
+        </th>
+        <th nz-th nzWidth="120px">
+          <span>预约日期</span>
+        </th>
+      </tr>
+    </thead>
+  </ng-template>
+  <tbody nz-tbody>
+    <ng-template ngFor let-data [ngForOf]="nzTable.data">
+      <tr nz-tbody-tr>
+        <td nz-td [nzExpand]="true">
+          <nz-row-expand-icon [(nzExpand)]="data.expand"></nz-row-expand-icon>
+        </td>
+        <td nz-td><a href="javascript: void(0);">查看电话</a></td>
+        <td nz-td>{{data.age}}</td>
+        <td nz-td>{{data.address}}</td>
+        <td nz-td>{{data.address}}</td>
+        <td nz-td>{{data.name}}</td>
+        <td nz-td>{{data.age}}</td>
+      </tr>
+      <tr nz-tbody-tr *ngIf="data.expand" class="ui-table-expand">
+        <td nz-td></td>
+        <td nz-td colspan="9">
+          <div class="expand-box">
+            <div nz-col [nzSpan]="12">
+              <label nz-col [nzSpan]="8">填写时间</label>
+              <div nz-col [nzSpan]="16">2017-11-09 23:12:01</div>
+            </div>
+            <div nz-col [nzSpan]="12">
+              <label nz-col [nzSpan]="8">活动价格</label>
+              <div nz-col [nzSpan]="16">¥12.05</div>
+            </div>
+            <div nz-col [nzSpan]="24">
+              <label nz-col [nzSpan]="4">备注</label>
+              <div nz-col [nzSpan]="20">多放辣椒多放醋, 多放辣椒多放醋, 多放辣椒多放醋</div>
+            </div>
+          </div>
+        </td>
+      </tr>
+    </ng-template>
+  </tbody>
+</nz-table>
