新增客户信息

--- a/src/app/views/customer/add/add.component.html
+++ b/src/app/views/customer/add/add.component.html
@@ -21,6 +21,80 @@
     </div>
   </div>
   <div nz-form-item nz-row>
+    <div nz-form-label nz-col [nzSpan]="7">
+      <label nz-form-item-required>省市区</label>
+    </div>
+    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('address')" nzHasFeedback>
+      <nz-cascader 
+        formControlName="address"
+        nzSize="large"
+        [nzOptions]="addressItems" 
+        nzPlaceHolder="省市区" 
+        [nzAllowClear]="false"
+        (nzChange)="_addressChange($event)">
+      </nz-cascader>
+      <div nz-form-explain *ngIf="getFormControl('address').dirty && getFormControl('address').hasError('required')">请选择省市区</div>
+    </div>
+  </div>
+  <div nz-form-item nz-row>
+    <div nz-form-label nz-col [nzSpan]="7">
+      <label nz-form-item-required>所属门店</label>
+    </div>
+    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('store')" nzHasFeedback>
+      <nz-select
+        formControlName="store"
+        nzSize="large"
+        nzPlaceHolder="请选择所属门店"
+        [nzShowSearch]="true">
+        <nz-option
+          *ngFor="let option of storeItems"
+          [nzLabel]="option.label"
+          [nzValue]="option.value"
+          [nzDisabled]="option.disabled">
+        </nz-option>
+      </nz-select>
+      <div nz-form-explain *ngIf="getFormControl('store').dirty && getFormControl('store').hasError('required')">请选择省市区</div>
+    </div>
+  </div>
+  <div nz-form-item nz-row>
+    <div nz-form-label nz-col [nzSpan]="7">
+      <label nz-form-item-required>活动价格</label>
+    </div>
+    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('price')" nzHasFeedback>
+      <nz-select
+        formControlName="price"
+        nzSize="large"
+        nzPlaceHolder="请选择所属门店">
+        <nz-option
+          *ngFor="let option of priceItems"
+          [nzLabel]="option.label"
+          [nzValue]="option.value"
+          [nzDisabled]="option.disabled">
+        </nz-option>
+      </nz-select>
+      <div nz-form-explain *ngIf="getFormControl('price').dirty && getFormControl('price').hasError('required')">请选择省市区</div>
+    </div>
+  </div>
+  <div nz-form-item nz-row>
+    <div nz-form-label nz-col [nzSpan]="7">
+      <label nz-form-item-required>推广渠道</label>
+    </div>
+    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('source')" nzHasFeedback>
+      <nz-select
+        formControlName="source"
+        nzPlaceHolder="请选择所属门店"
+        [nzShowSearch]="true">
+        <nz-option
+          *ngFor="let option of sourceItems"
+          [nzLabel]="option.label"
+          [nzValue]="option.value"
+          [nzDisabled]="option.disabled">
+        </nz-option>
+      </nz-select>
+      <div nz-form-explain *ngIf="getFormControl('source').dirty && getFormControl('source').hasError('required')">请选择省市区</div>
+    </div>
+  </div>
+  <div nz-form-item nz-row>
     <div nz-col [nzOffset]="7" [nzSpan]="12" nz-form-control>
       <button nz-button [nzType]="'primary'" [nzSize]="'large'" [disabled]="!validateForm.valid">Submit</button>
       <button nz-button [nzSize]="'large'" (click)="resetForm($event)">Reset</button>
