--- a/src/app/views/customer/new/new.component.html
+++ b/src/app/views/customer/new/new.component.html
@@ -123,7 +123,21 @@
       <button nz-button nzSize="large" (click)="resetForm()">重置</button>
       <nz-button-group [style.float]="'right'">
         <button nz-button nzType="primary" (click)="showModalForComponent()">新增客户信息</button>
-        <button nz-button nzType="primary">批量导入客户信息</button>
+        <nz-dropdown>
+          <button nz-button nz-dropdown nzType="primary">
+            <span>批量导入客户信息</span>
+            <i class="anticon anticon-down"></i>
+          </button>
+          <ul nz-menu>
+            <li nz-menu-item>
+              <a href="javascript:;">下载批量EXCEL模版</a>
+            </li>
+            <li nz-menu-item>
+              <input type="file" [style.display]="'none'" id="upExcel" #excelFile (change)="upExcel(excelFile)">
+              <a href="javascript:;"><label for="upExcel" [style.cursor]="'pointer'">上传批量EXCEL模版</label></a>
+            </li>
+          </ul>
+        </nz-dropdown>
         <button nz-button nzType="primary">新增客户来源</button>
       </nz-button-group>
     </div>
