--- a/src/app/sass/reset.scss
+++ b/src/app/sass/reset.scss
@@ -3,7 +3,7 @@
  * @module: 浏览器统一样式
  * @author: phuhoang
  */
-body,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0}
+body,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0;}
 table{border-collapse:collapse;border-spacing:0}
 address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal}
 ol,ul{list-style:none}
@@ -12,7 +12,7 @@ h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}
 q:before,q:after{content:''}
 abbr,acronym{border:0;font-variant:normal}
 sup{vertical-align:text-top}
-a{text-decoration:none;color:inherit;&:focus{outline:none;}}
+a{text-decoration:none;color:inherit;}
 sub{vertical-align:text-bottom;}
 body{font:14px/1.5 \5FAE\8F6F\96C5\9ED1,sans-serif; color: $fontColor;}
 .clear:after{content:"\0020";height:0;display:block;clear:both;}
