--- a/src/app/views/customer/new/new.component.html
+++ b/src/app/views/customer/new/new.component.html
@@ -67,7 +67,7 @@
           <nz-cascader 
             formControlName="address"
             nzSize="large"
-            [nzOptions]="_options" 
+            [nzOptions]="addressItems" 
             nzPlaceHolder="省市区" 
             [nzChangeOnSelect]="true"
             (nzChange)="_addressChange($event)">
@@ -122,7 +122,7 @@
       <button nz-button nzSize="large" [nzType]="'primary'" (click)="query()">搜索</button>
       <button nz-button nzSize="large" (click)="resetForm()">重置</button>
       <nz-button-group [style.float]="'right'">
-        <button nz-button nzType="primary" (click)="showModalForComponent()">新增客户信息</button>
+        <button nz-button nzType="primary" (click)="addCustomerInfo()">新增客户信息</button>
         <nz-dropdown>
           <button nz-button nz-dropdown nzType="primary">
             <span>批量导入客户信息</span>
@@ -138,7 +138,7 @@
             </li>
           </ul>
         </nz-dropdown>
-        <button nz-button nzType="primary">新增客户来源</button>
+        <button nz-button nzType="primary" (click)="addCustomerSource()">新增客户来源</button>
       </nz-button-group>
     </div>
   </div>
