新增HttpService/远程获取表格数据

--- a/src/app/views/customer/new/new.component.html
+++ b/src/app/views/customer/new/new.component.html
@@ -145,7 +145,15 @@
 </form>
 
 
-<nz-table #nzTable [nzDataSource]="tableItems" [nzPageSize]="10" [nzScroll]="{ y: 560 }">
+<nz-table #nzTable 
+  [nzAjaxData]="tableItems"
+  [nzShowSizeChanger]="true"
+  [nzLoading]="_loading"
+  [nzTotal]="_total"
+  [(nzPageIndex)]="_current"
+  (nzPageIndexChange)="refreshData()"
+  [(nzPageSize)]="_pageSize"
+  (nzPageSizeChange)="refreshData(true)" [nzPageSize]="10" [nzScroll]="{ y: 560 }">
   <ng-template #nzFixedHeader>
     <thead nz-thead>
       <tr>
