静态页面完成

--- a/src/app/base/header/header.component.html
+++ b/src/app/base/header/header.component.html
@@ -12,6 +12,11 @@
     <div class="ui-user-cell">
       <img src="../../../assets/images/default-boy.png" alt="">
       <span>管理员</span>
+      <div class="ui-user-fixed">
+        <ul>
+          <li>退出</li>
+        </ul>
+      </div>
     </div>
   </div>
 
