--- a/src/app/views/customer/follow-up/follow-up.component.html
+++ b/src/app/views/customer/follow-up/follow-up.component.html
@@ -1,3 +1,93 @@
-<p>
-  follow-up works!
-</p>
+<form nz-form [formGroup]="queryForm" class="ant-advanced-search-form query-head">
+  <div nz-row [nzGutter]="30">
+    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label [attr.for]="'phone'">家长电话</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="19">
+          <nz-input nzSize="large" nzPlaceHolder="请输入家长电话" formControlName="phone" nzId="phone"></nz-input>
+        </div>
+      </div>
+    </div>
+    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label [attr.for]="'name'">宝宝昵称</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="19">
+          <nz-input [nzSize]="'large'" nzPlaceHolder="请输入宝宝昵称" formControlName="name" nzId="name"></nz-input>
+        </div>
+      </div>
+    </div>
+    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label [attr.for]="'createTimeStart'">填写日期</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="19">
+          <nz-datepicker nz-col [nzSpan]="11" formControlName="createTimeStart" [nzSize]="'large'" [nzPlaceHolder]="'开始日期'" [nzFormat]="'YYYY-MM-DD'"
+            [nzDisabledDate]="_disabledStartDate1"></nz-datepicker>
+          <div nz-col [nzSpan]="2" style="text-align: center">-</div>
+          <nz-datepicker nz-col [nzSpan]="11" formControlName="createTimeEnd" [nzSize]="'large'" [nzPlaceHolder]="'结束日期'" [nzFormat]="'YYYY-MM-DD'"
+            [nzDisabledDate]="_disabledEndDate1"></nz-datepicker>
+        </div>
+      </div>
+    </div>
+    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label [attr.for]="'priceStart'">活动价格</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="19">
+          <nz-input-number nzSize="large" formControlName="priceStart" nzPlaceHolder="最低价格"></nz-input-number>
+          <div nz-col [nzSpan]="2" style="text-align: center">-</div>
+          <nz-input-number nzSize="large" formControlName="priceEnd" nzPlaceHolder="最高价格" [nzMin]="queryForm.get('priceStart').value"></nz-input-number>
+        </div>
+      </div>
+    </div>
+    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label>省市区</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="19">
+          <nz-cascader formControlName="address" nzSize="large" [nzOptions]="addressItems" nzPlaceHolder="省市区" [nzChangeOnSelect]="true"
+            (nzChange)="_addressChange($event)">
+          </nz-cascader>
+        </div>
+      </div>
+    </div>
+    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label>所属门店</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="19">
+          <nz-select nzSize="large" formControlName="store" nzPlaceHolder="请选择所属门店" [nzShowSearch]="true" nzAllowClear>
+            <nz-option *ngFor="let option of storeItems" [nzLabel]="option.label" [nzValue]="option" [nzDisabled]="option.disabled">
+            </nz-option>
+          </nz-select>
+        </div>
+      </div>
+    </div>
+    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label [attr.for]="'createTimeStart'">预约日期</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="19">
+          <nz-datepicker nz-col [nzSpan]="11" formControlName="reserveTimeStart" [nzSize]="'large'" [nzPlaceHolder]="'开始日期'" [nzFormat]="'YYYY-MM-DD'"
+            [nzDisabledDate]="_disabledStartDate2"></nz-datepicker>
+          <div nz-col [nzSpan]="2" style="text-align: center">-</div>
+          <nz-datepicker nz-col [nzSpan]="11" formControlName="reserveTimeEnd" [nzSize]="'large'" [nzPlaceHolder]="'结束日期'" [nzFormat]="'YYYY-MM-DD'"
+            [nzDisabledDate]="_disabledEndDate2"></nz-datepicker>
+        </div>
+      </div>
+    </div>
+    <div nz-col [nzSpan]="24" nz-form-item [style.text-align]="'center'">
+      <button nz-button nzSize="large" [nzType]="'primary'" (click)="query()">搜索</button>
+      <button nz-button nzSize="large" (click)="resetForm()">重置</button>
+    </div>
+  </div>
+</form>
