--- a/src/app/views/customer/new/new.component.html
+++ b/src/app/views/customer/new/new.component.html
@@ -153,36 +153,33 @@
   [(nzPageIndex)]="_current"
   (nzPageIndexChange)="refreshData()"
   [(nzPageSize)]="_pageSize"
-  (nzPageSizeChange)="refreshData(true)"
-  [nzScroll]="{ y: 560 }">
-  <ng-template #nzFixedHeader>
-    <thead nz-thead>
-      <tr>
-        <th nz-th [nzExpand]="true" nzWidth="50px"></th>
-        <th nz-th nzWidth="80px">
-          <span>家长电话</span>
-        </th>
-        <th nz-th nzWidth="80px">
-          <span>宝宝昵称</span>
-        </th>
-        <th nz-th nzWidth="100px">
-          <span>客户来源</span>
-        </th>
-        <th nz-th nzWidth="160px">
-          <span>省市区</span>
-        </th>
-        <th nz-th nzWidth="160px">
-          <span>归属门店</span>
-        </th>
-        <th nz-th nzWidth="120px">
-          <span>预约日期</span>
-        </th>
-        <th nz-th nzWidth="60px">
-          <span>预约日期</span>
-        </th>
-      </tr>
-    </thead>
-  </ng-template>
+  (nzPageSizeChange)="refreshData(true)">
+  <thead nz-thead>
+    <tr>
+      <th nz-th [nzExpand]="true" nzWidth="50px"></th>
+      <th nz-th nzWidth="80px">
+        <span>家长电话</span>
+      </th>
+      <th nz-th nzWidth="80px">
+        <span>宝宝昵称</span>
+      </th>
+      <th nz-th nzWidth="100px">
+        <span>客户来源</span>
+      </th>
+      <th nz-th nzWidth="160px">
+        <span>省市区</span>
+      </th>
+      <th nz-th nzWidth="160px">
+        <span>归属门店</span>
+      </th>
+      <th nz-th nzWidth="120px">
+        <span>预约日期</span>
+      </th>
+      <th nz-th nzWidth="60px">
+        <span>预约日期</span>
+      </th>
+    </tr>
+  </thead>
   <tbody nz-tbody>
     <ng-template ngFor let-data [ngForOf]="nzTable.data">
       <tr nz-tbody-tr>
@@ -207,7 +204,7 @@
             </div>
             <div nz-col [nzSpan]="12">
               <label nz-col [nzSpan]="8">活动价格</label>
-              <div nz-col [nzSpan]="16">¥12.05</div>
+              <div nz-col [nzSpan]="16">¥12.05</div>
             </div>
             <div nz-col [nzSpan]="24">
               <label nz-col [nzSpan]="4">备注</label>
