--- a/src/app/base/header/header.component.scss
+++ b/src/app/base/header/header.component.scss
@@ -49,6 +49,7 @@
     position: absolute;
     top: 64px;
     left: 0;
+    z-index: 999;
     opacity: 0;
     visibility: hidden;
     transform: translate3d(0, 10px, 0);
