--- a/src/app/views/customer/add/add.component.html
+++ b/src/app/views/customer/add/add.component.html
@@ -3,33 +3,33 @@
     <div nz-form-label nz-col [nzSpan]="7">
       <label nz-form-item-required>宝宝昵称</label>
     </div>
-    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('name')" nzHasFeedback>
-      <nz-input formControlName="name" [nzType]="'text'" nzPlaceHolder="请输入宝宝昵称" [nzSize]="'large'">
+    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('secondName')" nzHasFeedback>
+      <nz-input formControlName="secondName" [nzType]="'text'" nzPlaceHolder="请输入宝宝昵称" [nzSize]="'large'">
       </nz-input>
-      <div nz-form-explain *ngIf="getFormControl('name').dirty && getFormControl('name').hasError('required')">请输入宝宝昵称</div>
+      <div nz-form-explain *ngIf="getFormControl('secondName').dirty && getFormControl('secondName').hasError('required')">请输入宝宝昵称</div>
     </div>
   </div>
   <div nz-form-item nz-row>
     <div nz-form-label nz-col [nzSpan]="7">
       <label nz-form-item-required>家长电话</label>
     </div>
-    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('phone')" nzHasFeedback>
-      <nz-input formControlName="phone" [nzType]="'text'" nzPlaceHolder="请输入家长电话" [nzSize]="'large'">
+    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('parentPhone')" nzHasFeedback>
+      <nz-input formControlName="parentPhone" [nzType]="'text'" nzPlaceHolder="请输入家长电话" [nzSize]="'large'">
       </nz-input>
-      <div nz-form-explain *ngIf="getFormControl('phone').dirty && getFormControl('phone').hasError('required')">请输入家长电话</div>
-      <div nz-form-explain *ngIf="getFormControl('phone').dirty && getFormControl('phone').hasError('pattern')">请输入正确的电话号码</div>
+      <div nz-form-explain *ngIf="getFormControl('parentPhone').dirty && getFormControl('parentPhone').hasError('required')">请输入家长电话</div>
+      <div nz-form-explain *ngIf="getFormControl('parentPhone').dirty && getFormControl('parentPhone').hasError('pattern')">请输入正确的电话号码</div>
     </div>
   </div>
   <div nz-form-item nz-row>
     <div nz-form-label nz-col [nzSpan]="7">
       <label nz-form-item-required>省市区</label>
     </div>
-    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('address')" nzHasFeedback>
+    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('address')">
       <nz-cascader 
         formControlName="address"
         nzSize="large"
         [nzOptions]="addressItems" 
-        nzPlaceHolder="省市区" 
+        nzPlaceHolder="请选择省市区"
         [nzAllowClear]="false"
         (nzChange)="_addressChange($event)">
       </nz-cascader>
@@ -40,64 +40,54 @@
     <div nz-form-label nz-col [nzSpan]="7">
       <label nz-form-item-required>所属门店</label>
     </div>
-    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('store')" nzHasFeedback>
+    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('shopId')">
       <nz-select
-        formControlName="store"
+        formControlName="shopId"
         nzSize="large"
         nzPlaceHolder="请选择所属门店"
         [nzShowSearch]="true">
         <nz-option
-          *ngFor="let option of storeItems"
-          [nzLabel]="option.label"
-          [nzValue]="option.value"
-          [nzDisabled]="option.disabled">
+          *ngFor="let option of stopItems"
+          [nzLabel]="option.shopName"
+          [nzValue]="option.id">
         </nz-option>
       </nz-select>
-      <div nz-form-explain *ngIf="getFormControl('store').dirty && getFormControl('store').hasError('required')">请选择省市区</div>
+      <div nz-form-explain *ngIf="getFormControl('shopId').dirty && getFormControl('shopId').hasError('required')">请选择所属门店</div>
     </div>
   </div>
   <div nz-form-item nz-row>
     <div nz-form-label nz-col [nzSpan]="7">
       <label nz-form-item-required>活动价格</label>
     </div>
-    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('price')" nzHasFeedback>
-      <nz-select
-        formControlName="price"
-        nzSize="large"
-        nzPlaceHolder="请选择所属门店">
-        <nz-option
-          *ngFor="let option of priceItems"
-          [nzLabel]="option.label"
-          [nzValue]="option.value"
-          [nzDisabled]="option.disabled">
-        </nz-option>
-      </nz-select>
-      <div nz-form-explain *ngIf="getFormControl('price').dirty && getFormControl('price').hasError('required')">请选择省市区</div>
+    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('activityPrice')" nzHasFeedback>
+      <nz-input formControlName="activityPrice" [nzType]="'text'" nzPlaceHolder="请输入活动价格" [nzSize]="'large'">
+      </nz-input>
+      <div nz-form-explain *ngIf="getFormControl('activityPrice').dirty && getFormControl('activityPrice').hasError('required')">请输入活动价格</div>
+      <div nz-form-explain *ngIf="getFormControl('activityPrice').dirty && getFormControl('activityPrice').hasError('pattern')">请输入正确的金额</div>
     </div>
   </div>
   <div nz-form-item nz-row>
     <div nz-form-label nz-col [nzSpan]="7">
       <label nz-form-item-required>推广渠道</label>
     </div>
-    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('source')" nzHasFeedback>
+    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('customerSpreadRelationId')">
       <nz-select
-        formControlName="source"
-        nzPlaceHolder="请选择所属门店"
+        formControlName="customerSpreadRelationId"
+        nzPlaceHolder="请选择推广渠道"
         [nzShowSearch]="true">
         <nz-option
           *ngFor="let option of sourceItems"
-          [nzLabel]="option.label"
-          [nzValue]="option.value"
-          [nzDisabled]="option.disabled">
+          [nzLabel]="option.name"
+          [nzValue]="option.id">
         </nz-option>
       </nz-select>
-      <div nz-form-explain *ngIf="getFormControl('source').dirty && getFormControl('source').hasError('required')">请选择省市区</div>
+      <div nz-form-explain *ngIf="getFormControl('customerSpreadRelationId').dirty && getFormControl('customerSpreadRelationId').hasError('required')">请选择推广渠道</div>
     </div>
   </div>
   <div nz-form-item nz-row>
     <div nz-col [nzOffset]="7" [nzSpan]="12" nz-form-control>
-      <button nz-button [nzType]="'primary'" [nzSize]="'large'" [disabled]="!validateForm.valid">Submit</button>
-      <button nz-button [nzSize]="'large'" (click)="resetForm($event)">Reset</button>
+      <button nz-button [nzType]="'primary'" [nzSize]="'large'" [disabled]="!validateForm.valid" (click)="saveUserInfo">保存</button>
+      <button nz-button [nzSize]="'large'" (click)="resetForm($event)">重置</button>
     </div>
   </div>
 </form>
