--- a/src/app/views/customer/update/update.component.html
+++ b/src/app/views/customer/update/update.component.html
@@ -3,19 +3,10 @@
     <div nz-form-label nz-col [nzSpan]="7">
       <label nz-form-item-required>宝宝昵称</label>
     </div>
-    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('name')">
-      <nz-input formControlName="name" [nzType]="'text'" nzPlaceHolder="请输入宝宝昵称" [nzSize]="'large'">
+    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('secondName')">
+      <nz-input formControlName="secondName" [nzType]="'text'" nzPlaceHolder="请输入宝宝昵称" [nzSize]="'large'">
       </nz-input>
-      <div nz-form-explain *ngIf="getFormControl('name').dirty && getFormControl('name').hasError('required')">请输入宝宝昵称</div>
-    </div>
-  </div>
-  <div nz-form-item nz-row>
-    <div nz-form-label nz-col [nzSpan]="7">
-      <label>预约时间</label>
-    </div>
-    <div nz-col [nzSpan]="12" nz-form-control>
-      <nz-input formControlName="reserveTime" [nzType]="'text'" nzPlaceHolder="请选择预约时间" [nzSize]="'large'">
-      </nz-input>
+      <div nz-form-explain *ngIf="getFormControl('secondName').dirty && getFormControl('secondName').hasError('required')">请输入宝宝昵称</div>
     </div>
   </div>
   <div nz-form-item nz-row>
@@ -23,22 +14,80 @@
       <label>跟踪记录</label>
     </div>
     <div nz-col [nzSpan]="12" nz-form-control>
-      <nz-radio-group formControlName="type" [nzSize]="'large'">
-        <label nz-radio-button [nzValue]="0">
+      <nz-radio-group formControlName="visitStage" [nzSize]="'large'">
+        <label nz-radio-button [nzValue]="1">
           <span>已拨打电话</span>
         </label>
-        <label nz-radio-button [nzValue]="1">
+        <label nz-radio-button [nzValue]="2">
           <span>未拨打电话</span>
         </label>
       </nz-radio-group>
       <div>
-        <nz-input formControlName="desc" [nzType]="'textarea'" [nzRows]="3" nzPlaceHolder="请输入内部记录信息"></nz-input>
+        <nz-input formControlName="visitInfo" [nzType]="'textarea'" [nzRows]="3" nzPlaceHolder="请输入内部记录信息"></nz-input>
       </div>
+    </div>
+  </div>
+  <div nz-form-item nz-row *ngIf="!_userInfo.shopId">
+    <div nz-form-label nz-col [nzSpan]="7">
+      <label nz-form-item-required>省市区</label>
+    </div>
+    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('address')">
+      <nz-cascader 
+        formControlName="address"
+        nzSize="large"
+        [nzOptions]="addressItems" 
+        nzPlaceHolder="请选择省市区"
+        [nzAllowClear]="false"
+        (nzChange)="_addressChange($event)">
+      </nz-cascader>
+      <div nz-form-explain *ngIf="getFormControl('address').dirty && getFormControl('address').hasError('required')">请选择省市区</div>
+    </div>
+  </div>
+  <div nz-form-item nz-row *ngIf="!_userInfo.shopId">
+    <div nz-form-label nz-col [nzSpan]="7">
+      <label nz-form-item-required>所属门店</label>
+    </div>
+    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('shopId')">
+      <nz-select
+        formControlName="shopId"
+        nzSize="large"
+        nzPlaceHolder="请选择所属门店"
+        (change)="selectChange"
+        (nzOpenChange)="selectChange()"
+        [nzShowSearch]="true">
+        <nz-option
+          *ngFor="let option of stopItems"
+          [nzLabel]="option.shopName"
+          [nzValue]="option.id">
+        </nz-option>
+      </nz-select>
+      <div nz-form-explain *ngIf="getFormControl('shopId').dirty && getFormControl('shopId').hasError('required')">请选择所属门店</div>
     </div>
   </div>
   <div nz-form-item nz-row>
     <div nz-form-label nz-col [nzSpan]="7">
-      <label nz-form-item-required>备注信息</label>
+      <label nz-form-item-required>预约时间</label>
+    </div>
+    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('precontractId')">
+      <nz-datepicker 
+        formControlName="precontractDate" 
+        nzPlaceHolder="请选择预约日期" 
+        [nzDisabledDate]="_disabledDate"
+        nzFormat="YYYY-MM-DD" 
+        [nzSize]="'large'" 
+        style="width: 100%;margin-bottom: 5px;"></nz-datepicker>
+      <nz-select formControlName="precontractId" nzSize="large" nzPlaceHolder="请选择时间段">
+        <nz-option *ngFor="let option of timeItems" [nzLabel]="option.precontractTime" [nzValue]="option.precontractId" [nzDisabled]="option.status">
+        </nz-option>
+      </nz-select>
+      <div nz-form-explain 
+        *ngIf="getFormControl('precontractDate').dirty && getFormControl('precontractDate').hasError('required') || getFormControl('precontractId').dirty && getFormControl('precontractId').hasError('required')"
+      >请选择预约时间</div>
+    </div>
+  </div>
+  <div nz-form-item nz-row>
+    <div nz-form-label nz-col [nzSpan]="7">
+      <label>备注信息</label>
     </div>
     <div nz-col [nzSpan]="12" nz-form-control>
       <nz-input formControlName="remark" [nzType]="'textarea'" [nzRows]="3" nzPlaceHolder="请输入备注信息"></nz-input>
@@ -46,8 +95,8 @@
   </div>
   <div nz-form-item nz-row>
     <div nz-col [nzOffset]="7" [nzSpan]="12" nz-form-control>
-      <button nz-button [nzType]="'primary'" [nzSize]="'large'" [disabled]="!validateForm.valid">Submit</button>
-      <button nz-button [nzSize]="'large'" (click)="resetForm($event)">Reset</button>
+      <button nz-button [nzType]="'primary'" [nzSize]="'large'" [disabled]="!validateForm.valid">提交</button>
+      <button nz-button [nzSize]="'large'" (click)="resetForm($event)">重置</button>
     </div>
   </div>
 </form>
