--- a/src/app/views/customer/follow-up/follow-up.component.html
+++ b/src/app/views/customer/follow-up/follow-up.component.html
@@ -85,9 +85,97 @@
         </div>
       </div>
     </div>
+    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label>状态</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="19">
+          <nz-select nzSize="large" formControlName="status" nzPlaceHolder="请选择状态" [nzShowSearch]="true" nzAllowClear>
+            <nz-option *ngFor="let option of [
+                  { value: 1, label: '首次跟踪' },
+                  { value: 2, label: '二次跟踪' },
+                  { value: 3, label: '已预约' }
+                ]" [nzLabel]="option.label" [nzValue]="option.value" [nzDisabled]="option.disabled">
+            </nz-option>
+          </nz-select>
+        </div>
+      </div>
+    </div>
     <div nz-col [nzSpan]="24" nz-form-item [style.text-align]="'center'">
       <button nz-button nzSize="large" [nzType]="'primary'" (click)="query()">搜索</button>
       <button nz-button nzSize="large" (click)="resetForm()">重置</button>
     </div>
   </div>
 </form>
+
+
+<nz-table #nzTable [nzAjaxData]="tableItems" [nzShowSizeChanger]="true" [nzLoading]="tableInfo.loading" [nzTotal]="tableInfo.total"
+  [(nzPageIndex)]="tableInfo.pageNo" (nzPageIndexChange)="query()" [(nzPageSize)]="tableInfo.pageSize" (nzPageSizeChange)="query(true)">
+  <thead nz-thead>
+    <tr>
+      <th nz-th [nzExpand]="true" nzWidth="50px"></th>
+      <th nz-th nzWidth="80px">
+        <span>家长电话</span>
+      </th>
+      <th nz-th nzWidth="80px">
+        <span>宝宝昵称</span>
+      </th>
+      <th nz-th nzWidth="100px">
+        <span>客户来源</span>
+      </th>
+      <th nz-th nzWidth="160px">
+        <span>省市区</span>
+      </th>
+      <th nz-th nzWidth="160px">
+        <span>归属门店</span>
+      </th>
+      <th nz-th nzWidth="120px">
+        <span>预约日期</span>
+      </th>
+      <th nz-th nzWidth="60px">
+        <span>操作</span>
+      </th>
+    </tr>
+  </thead>
+  <tbody nz-tbody>
+    <ng-template ngFor let-data [ngForOf]="nzTable.data">
+      <tr nz-tbody-tr>
+        <td nz-td [nzExpand]="true">
+          <nz-row-expand-icon [(nzExpand)]="data.expand"></nz-row-expand-icon>
+        </td>
+        <td nz-td>
+          <a href="javascript: void(0);" (click)="getPhone(data)" [hidden]="data.checkPhone">查看电话</a>
+          {{ data.checkPhone ? data.checkPhone : ''}}
+        </td>
+        <td nz-td>{{data.secondName}}</td>
+        <td nz-td>{{data.customerSpreadRelationId}}</td>
+        <td nz-td>{{data.province + data.city + data.area}}</td>
+        <td nz-td>{{data.shopName}}</td>
+        <td nz-td>{{data.preStartDate}}</td>
+        <td nz-td>
+          <a href="javascript: void(0);" (click)="updateCustomerInfo(data)">确认</a>
+        </td>
+      </tr>
+      <tr nz-tbody-tr *ngIf="data.expand" class="ui-table-expand">
+        <td nz-td></td>
+        <td nz-td colspan="10">
+          <div class="expand-box">
+            <div nz-col [nzSpan]="12">
+              <label nz-col [nzSpan]="8">填写时间</label>
+              <div nz-col [nzSpan]="16">2017-11-09 23:12:01</div>
+            </div>
+            <div nz-col [nzSpan]="12">
+              <label nz-col [nzSpan]="8">活动价格</label>
+              <div nz-col [nzSpan]="16">¥12.05</div>
+            </div>
+            <div nz-col [nzSpan]="24">
+              <label nz-col [nzSpan]="4">备注</label>
+              <div nz-col [nzSpan]="20">多放辣椒多放醋, 多放辣椒多放醋, 多放辣椒多放醋</div>
+            </div>
+          </div>
+        </td>
+      </tr>
+    </ng-template>
+  </tbody>
+</nz-table>
