--- a/src/app/base/header/header.component.html
+++ b/src/app/base/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="ui-header">
 
-  <div class="ui-menu-collapsed">
+  <div class="ui-menu-collapsed" style="display: none;">
     <i class="anticon" [class.anticon-menu-fold]="!isCollapsed" [class.anticon-menu-unfold]="isCollapsed" (click)="isCollapsed=!isCollapsed"></i>
   </div>
 
