--- a/src/app/base/menu/menu.component.html
+++ b/src/app/base/menu/menu.component.html
@@ -16,7 +16,7 @@
       </span>
       <ul>
         <li nz-menu-item [routerLink]="['/home/newcustomer']">新进客户</li>
-        <li nz-menu-item [routerLink]="['/home/followupcustomer']">已更近客户</li>
+        <li nz-menu-item [routerLink]="['/home/followupcustomer']">已更进客户</li>
       </ul>
     </li>
   </ul>
