--- a/src/app/views/customer/add/add.component.html
+++ b/src/app/views/customer/add/add.component.html
@@ -24,7 +24,7 @@
     <div nz-form-label nz-col [nzSpan]="7">
       <label nz-form-item-required>省市区</label>
     </div>
-    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('address')">
+    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('province')">
       <nz-cascader 
         formControlName="address"
         nzSize="large"
@@ -33,7 +33,7 @@
         [nzAllowClear]="false"
         (nzChange)="_addressChange($event)">
       </nz-cascader>
-      <div nz-form-explain *ngIf="getFormControl('address').dirty && getFormControl('address').hasError('required')">请选择省市区</div>
+      <div nz-form-explain *ngIf="getFormControl('province').dirty && getFormControl('province').hasError('required')">请选择省市区</div>
     </div>
   </div>
   <div nz-form-item nz-row>
@@ -86,7 +86,7 @@
   </div>
   <div nz-form-item nz-row>
     <div nz-col [nzOffset]="7" [nzSpan]="12" nz-form-control>
-      <button nz-button [nzType]="'primary'" [nzSize]="'large'" [disabled]="!validateForm.valid" (click)="saveUserInfo">保存</button>
+      <button nz-button [nzType]="'primary'" [nzSize]="'large'" [disabled]="!validateForm.valid || submitLoading" (click)="saveUserInfo">{{submitLoading ? '保存中...' : '保存'}}</button>
       <button nz-button [nzSize]="'large'" (click)="resetForm($event)">重置</button>
     </div>
   </div>
