--- a/src/app/views/customer/new/new.component.html
+++ b/src/app/views/customer/new/new.component.html
@@ -105,7 +105,20 @@
     <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
       <div nz-form-item nz-row>
         <div nz-form-label nz-col [nzSpan]="5">
-          <label [attr.for]="'createTimeStart'">预约日期</label>
+          <label>客户来源</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="19">
+          <nz-select nzSize="large" formControlName="customerSpreadRelationId" nzPlaceHolder="请选择客户来源" [nzShowSearch]="true" nzAllowClear>
+            <nz-option *ngFor="let option of customerSpreadItems" [nzLabel]="option.name" [nzValue]="option.id" [nzDisabled]="option.disabled">
+            </nz-option>
+          </nz-select>
+        </div>
+      </div>
+    </div>
+    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label>预约日期</label>
         </div>
         <div nz-form-control nz-col [nzSpan]="19">
           <nz-datepicker 
@@ -131,19 +144,45 @@
     <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
       <div nz-form-item nz-row>
         <div nz-form-label nz-col [nzSpan]="5">
+          <label>跟踪时间</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="19">
+          <nz-datepicker 
+            nz-col [nzSpan]="11"
+            formControlName="visitStartDate" 
+            [nzSize]="'large'" 
+            [nzPlaceHolder]="'开始日期'" 
+            [nzFormat]="'YYYY-MM-DD'"
+            [nzDisabledDate]="_disabledStartDate3"
+          ></nz-datepicker>
+          <div nz-col [nzSpan]="2" style="text-align: center">-</div>
+          <nz-datepicker 
+            nz-col [nzSpan]="11"
+            formControlName="visitEndDate" 
+            [nzSize]="'large'" 
+            [nzPlaceHolder]="'结束日期'" 
+            [nzFormat]="'YYYY-MM-DD'" 
+            [nzDisabledDate]="_disabledEndDate3"
+          ></nz-datepicker>
+        </div>
+      </div>
+    </div>
+    <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
           <label>状态</label>
         </div>
         <div nz-form-control nz-col [nzSpan]="19">
-          <nz-select nzSize="large" formControlName="status" nzPlaceHolder="请选择状态" [nzShowSearch]="true" nzAllowClear>
+          <nz-select nzSize="large" formControlName="stage" nzPlaceHolder="请选择状态" [nzShowSearch]="true" nzAllowClear>
             <nz-option
               *ngFor="let option of [
-                  { value: 1, label: '新用户' },
-                  { value: 2, label: '首次跟踪' },
-                  { value: 3, label: '二次跟踪' },
-                  { value: 4, label: '已预约' },
-                  { value: 5, label: '已分配' },
-                  { value: 6, label: '已体验' },
-                  { value: 7, label: '已办卡' }
+                  { value: 0, label: '新用户' },
+                  { value: 1, label: '首次跟踪' },
+                  { value: 2, label: '二次跟踪' },
+                  { value: 3, label: '已预约' },
+                  { value: 4, label: '已分配' },
+                  { value: 5, label: '已体验' },
+                  { value: 6, label: '已办卡' }
                 ]"
               [nzLabel]="option.label"
               [nzValue]="option.value"
@@ -207,6 +246,9 @@
       <th nz-th nzWidth="160px">
         <span>归属门店</span>
       </th>
+      <th nz-th nzWidth="90px">
+        <span>状态</span>
+      </th>
       <th nz-th nzWidth="120px">
         <span>预约日期</span>
       </th>
@@ -226,27 +268,53 @@
           {{ data.checkPhone ? data.checkPhone : ''}}
         </td>
         <td nz-td>{{data.secondName}}</td>
-        <td nz-td>{{data.customerSpreadRelationId}}</td>
+        <td nz-td>{{data.customerSpreadRelationName}}</td>
         <td nz-td>{{data.province + data.city + data.area}}</td>
-        <td nz-td>{{data.shopName}}</td>
-        <td nz-td>{{(data.precontractDate ? data.precontractDate : '')  + ' ' + (data.precontractTime ? data.precontractTime : '')}}</td>
-        <td nz-td><a href="javascript: void(0);" (click)="updateCustomerInfo(data)">{{data.appointmentId ? '-' : '预约'}}</a></td>
+        <td nz-td>{{data.shopName ? data.shopName : '-'}}</td>
+        <td nz-td>
+          <nz-tag [nzColor]="
+            data.stage == 0 ? 'pink' : 
+            data.stage == 1 ? 'red' : 
+            data.stage == 2 ? 'orange' : 
+            data.stage == 3 ? 'green' : 
+            data.stage == 4 ? 'cyan' : 
+            data.stage == 5 ? 'blue' : 'purple'">{{data.stage == 0 ? '新用户' : data.stage == 1 ? '首次跟踪' : data.stage == 2 ? '二次跟踪' : data.stage == 3 ? '已预约' : data.stage
+            == 4 ? '已分配' : data.stage == 5 ? '已体验' : '已办卡'}}</nz-tag>
+        </td>
+        <td nz-td>{{(data.precontractDate ? data.precontractDate : '-')  + ' ' + (data.precontractTime ? data.precontractTime : '-')}}</td>
+        <td nz-td><a href="javascript: void(0);" (click)="updateCustomerInfo(data)">{{data.appointmentId ? '-' : '记录'}}</a></td>
       </tr>
       <tr nz-tbody-tr *ngIf="data.expand" class="ui-table-expand">
         <td nz-td></td>
         <td nz-td colspan="10">
           <div class="expand-box">
-            <div nz-col [nzSpan]="12">
+            <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
               <label nz-col [nzSpan]="8">填写时间</label>
               <div nz-col [nzSpan]="16">{{data.createTime}}</div>
             </div>
-            <div nz-col [nzSpan]="12">
+            <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
               <label nz-col [nzSpan]="8">活动价格</label>
-              <div nz-col [nzSpan]="16">{{data.activityPrice}}</div>
+              <div nz-col [nzSpan]="16">￥{{data.activityPrice}}</div>
             </div>
-            <div nz-col [nzSpan]="24">
-              <label nz-col [nzSpan]="4">备注</label>
-              <div nz-col [nzSpan]="20">{{data.remark}}</div>
+            <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
+              <label nz-col [nzSpan]="8">跟踪时间</label>
+              <div nz-col [nzSpan]="16">{{data.visitTime}}</div>
+            </div>
+            <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
+              <label nz-col [nzSpan]="8">跟踪记录</label>
+              <div nz-col [nzSpan]="16">
+                <nz-tooltip [nzTitle]="data.visitInfo" [nzPlacement]="'top'">
+                  <span nz-tooltip>{{data.visitInfo}}</span>
+                </nz-tooltip>
+              </div>
+            </div>
+            <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
+              <label nz-col [nzSpan]="8">备注</label>
+              <div nz-col [nzSpan]="16">
+                <nz-tooltip [nzTitle]="data.remark" [nzPlacement]="'top'">
+                  <span nz-tooltip>{{data.remark}}</span>
+                </nz-tooltip>
+              </div>
             </div>
           </div>
         </td>
