--- a/src/app/views/customer/update/update.component.html
+++ b/src/app/views/customer/update/update.component.html
@@ -11,10 +11,10 @@
   </div>
   <div nz-form-item nz-row>
     <div nz-form-label nz-col [nzSpan]="7">
-      <label>跟踪记录</label>
+      <label nz-form-item-required>跟踪记录</label>
     </div>
     <div nz-col [nzSpan]="12" nz-form-control>
-      <nz-radio-group formControlName="visitStage" [nzSize]="'large'">
+      <nz-radio-group formControlName="visitStage" [nzSize]="'large'" style="margin-bottom: 0">
         <label nz-radio-button [nzValue]="1">
           <span>已拨打电话</span>
         </label>
@@ -22,9 +22,15 @@
           <span>未拨打电话</span>
         </label>
       </nz-radio-group>
-      <div>
+    </div>
+  </div>
+  <div nz-form-item nz-row>
+    <div nz-form-label nz-col [nzSpan]="7">
+      <label nz-form-item-required>内部记录</label>
+    </div>
+    <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('visitInfo')">
         <nz-input formControlName="visitInfo" [nzType]="'textarea'" [nzRows]="3" nzPlaceHolder="请输入内部记录信息"></nz-input>
-      </div>
+      <div nz-form-explain *ngIf="getFormControl('visitInfo').dirty && getFormControl('visitInfo').hasError('required')">请输入内部记录</div>
     </div>
   </div>
   <div nz-form-item nz-row *ngIf="!_userInfo.shopId">
@@ -66,7 +72,7 @@
   </div>
   <div nz-form-item nz-row>
     <div nz-form-label nz-col [nzSpan]="7">
-      <label nz-form-item-required>预约时间</label>
+      <label>预约时间</label>
     </div>
     <div nz-col [nzSpan]="12" nz-form-control [nzValidateStatus]="getFormControl('precontractId')">
       <nz-datepicker 
