新增手机号是否重复验证

--- a/src/app/views/customer/add/add.component.html
+++ b/src/app/views/customer/add/add.component.html
@@ -8,7 +8,7 @@
       </nz-input>
       <div nz-form-explain *ngIf="getFormControl('secondName').dirty && getFormControl('secondName').hasError('required')">请输入宝宝昵称</div>
     </div>
-  </div>
+  </div> 
   <div nz-form-item nz-row>
     <div nz-form-label nz-col [nzSpan]="7">
       <label nz-form-item-required>家长电话</label>
@@ -18,6 +18,8 @@
       </nz-input>
       <div nz-form-explain *ngIf="getFormControl('parentPhone').dirty && getFormControl('parentPhone').hasError('required')">请输入家长电话</div>
       <div nz-form-explain *ngIf="getFormControl('parentPhone').dirty && getFormControl('parentPhone').hasError('pattern')">请输入正确的电话号码</div>
+      <div nz-form-explain *ngIf="getFormControl('parentPhone').dirty && getFormControl('parentPhone').hasError('duplicated')">号码已存在, 请换一个</div>
+      <div nz-form-explain *ngIf="getFormControl('parentPhone').dirty && getFormControl('parentPhone').pending">验证手机号码是否重复中...</div>
     </div>
   </div>
   <div nz-form-item nz-row>
