--- a/src/app/base/menu/menu.component.html
+++ b/src/app/base/menu/menu.component.html
@@ -1,5 +1,5 @@
 <div class="ui-logo">
-  Opearte System
+  <img src="../../../assets/images/logo.png" alt="">
 </div>
 <div class="ui-menu">
   <ul nz-menu [nzMode]="'inline'" nzTheme='dark'>
