--- a/src/app/base/menu/menu.component.scss
+++ b/src/app/base/menu/menu.component.scss
@@ -1,10 +1,11 @@
 .ui-logo{
   height: 64px;
-  color: #fafbfb;
-  font-size: 30px;
-  line-height: 64px;
-  text-align: center;
   background: #00284d;
+  & > img{
+    height: 36px;
+    margin-top: 14px;
+    margin-left: 26px;
+  }
 }
 
 .ant-menu-submenu,
