--- a/src/app/views/customer/new/new.component.html
+++ b/src/app/views/customer/new/new.component.html
@@ -303,16 +303,16 @@
             <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
               <label nz-col [nzSpan]="8">跟踪记录</label>
               <div nz-col [nzSpan]="16">
-                <nz-tooltip [nzTitle]="data.visitInfo" [nzPlacement]="'top'">
-                  <span nz-tooltip>{{data.visitInfo}}</span>
+                <nz-tooltip [nzTitle]="data.visitInfo ? data.visitInfo : '暂无'" [nzPlacement]="'top'">
+                  <span nz-tooltip>{{data.visitInfo ? data.visitInfo : '--'}}</span>
                 </nz-tooltip>
               </div>
             </div>
             <div nz-col [nzXl]="6" [nzLg]="8" [nzSm]="12" [nzXs]="24">
               <label nz-col [nzSpan]="8">备注</label>
               <div nz-col [nzSpan]="16">
-                <nz-tooltip [nzTitle]="data.remark" [nzPlacement]="'top'">
-                  <span nz-tooltip>{{data.remark}}</span>
+                <nz-tooltip [nzTitle]="data.remark ? data.remark : '暂无'" [nzPlacement]="'top'">
+                  <span nz-tooltip>{{data.remark ? data.remark : '--'}}</span>
                 </nz-tooltip>
               </div>
             </div>
