课多多一期开发完毕

--- a/src/app/base/header/header.component.html
+++ b/src/app/base/header/header.component.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="ui-user-cell">
-      <img src="../../../assets/images/default-boy.png" alt="">
+      <img src="./assets/images/default-boy.png" alt="">
       <span>管理员</span>
       <div class="ui-user-fixed">
         <ul>
