--- a/src/app/base/menu/menu.component.html
+++ b/src/app/base/menu/menu.component.html
@@ -1,5 +1,5 @@
 <div class="ui-logo">
-  <img src="../../../assets/images/logo.png" alt="">
+  <img src="./assets/images/logo.png" alt="">
 </div>
 <div class="ui-menu">
   <ul nz-menu [nzMode]="'inline'" nzTheme='dark'>
@@ -16,7 +16,7 @@
       </span>
       <ul>
         <li nz-menu-item [routerLink]="['/home/newcustomer']">新进客户</li>
-        <li nz-menu-item [routerLink]="['/home/followupcustomer']">已更进客户</li>
+        <li nz-menu-item [routerLink]="['/home/followupcustomer']">已跟进客户</li>
       </ul>
     </li>
   </ul>
