--- a/src/app/views/customer/add/add.component.html
+++ b/src/app/views/customer/add/add.component.html
@@ -88,7 +88,7 @@
   </div>
   <div nz-form-item nz-row>
     <div nz-col [nzOffset]="7" [nzSpan]="12" nz-form-control>
-      <button nz-button [nzType]="'primary'" [nzSize]="'large'" [disabled]="!validateForm.valid || submitLoading" (click)="saveUserInfo">{{submitLoading ? '保存中...' : '保存'}}</button>
+      <button nz-button [nzType]="'primary'" [nzSize]="'large'" [disabled]="!validateForm.valid || submitLoading">{{submitLoading ? '保存中...' : '保存'}}</button>
       <button nz-button [nzSize]="'large'" (click)="resetForm($event)">重置</button>
     </div>
   </div>
